--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h1>Árbol de Búsqueda Binario</h1>
   <input type="number" id="value-node" placeholder="Ingrese un valor">
   <button onclick="addNode()">Agregar Nodo</button>
+  <button onclick="deleteNode()">Eliminar Nodo</button>
   <canvas class= "myCanvas" id="myCanvas" width="800" height="800"></canvas>
 </body>
 </html>
