--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <h1>Árbol de Búsqueda Binario</h1>
   <input type="number" id="value-node" placeholder="Ingrese un valor">
   <button onclick="addNode()">Agregar Nodo</button>
+  <input type="number" id="search-value" placeholder="Ingrese un valor">
+  <button onclick="searchNode()">Buscar Nodo</button>
+  <button onclick="clearTree()" class="clear-button">LIMPIAR ÁRBOL</button>
   <canvas class= "myCanvas" id="myCanvas" width="800" height="800"></canvas>
 </body>
 </html>
