delete button complete

--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Árbol de Búsqueda Binario</title>
-  <script src="index.js"></script>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Árbol de Búsqueda Binario</h1>
-  <label >Agregar un nodo</label>
-  <input type="number" id="value-node" placeholder="Ingrese un valor">
-  <button onclick="addNode()">Agregar Nodo</button>
-  <label>Buscar Nodo</label>
-  <input type="number" id="search-value" placeholder="Ingrese un valor">
-  <button onclick="searchNode()">Buscar Nodo</button>
-  <button onclick="deleteNode()">Eliminar Nodo</button>
-  <button onclick="clearTree()" class="clear-button">LIMPIAR ÁRBOL</button>
-  <canvas class= "myCanvas" id="myCanvas" width="800" height="800"></canvas>
-</body>
+  <head>
+    <title>Árbol de Búsqueda Binario</title>
+    <script src="index.js"></script>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>Árbol de Búsqueda Binario</h1>
+    <label>Agregar un nodo</label>
+    <input type="number" id="value-node" placeholder="Ingrese un valor" />
+    <button onclick="addNode()">Agregar Nodo</button>
+
+    <label>Buscar Nodo</label>
+    <input type="number" id="search-value" placeholder="Ingrese un valor" />
+    <button onclick="searchNode()">Buscar Nodo</button>
+
+    <label>Eliminar un nodo</label>
+    <input type="number" id="delete-node" />
+    <button onclick="deleteNode()">Eliminar Nodo</button>
+
+    <button onclick="clearTree()" class="clear-button">LIMPIAR ÁRBOL</button>
+    <canvas class="myCanvas" id="myCanvas" width="800" height="800"></canvas>
+  </body>
 </html>
